# VoteElectronique

./: .gitignore  CMakeLists.txt  NationalAuthority.cpp  README.md  config-min.json  config.json  main.cpp  main_decryption.cpp  votes.json
headers/: Bulletin.hpp  BulletinBoard.hpp  Center.hpp  Combiner.hpp  CryptoManager.hpp  CryptoServer.hpp  CryptoUtils.hpp  KeyGeneration.hpp  LocalAuthority.hpp  LocalBulletin.hpp  NationalAuthority.hpp  NationalBulletin.hpp  Properties.hpp  RegionalAuthority.hpp  RegionalBulletin.hpp  Verifier.hpp
src/: App.cpp  App.hpp  BulletinBoard.cpp  CMakeLists.txt  Client.cpp  Client.hpp  Combiner.cpp  Combiner.hpp  CryptoManager.cpp  CryptoServer.cpp  CryptoUtils.hpp  Decryption.hpp  Encryption.cpp  Encryption.hpp  KeyGeneration.cpp  KeyGeneration.hpp  LocalAuthority.cpp  LocalBulletin.cpp  NationalAuthority.cpp  NationalBulletin.cpp  Properties.cpp  Properties.hpp  Prover.cpp  Prover.hpp  RegionalAuthority.cpp  RegionalBulletin.cpp  Verifier.cpp  Verifier.hpp  sha256.cpp  sha256.hpp
src/authorities/: BulletinBoard.cpp  BulletinBoard.hpp  CMakeLists.txt  Center.hpp  LocalAuthority.cpp  LocalAuthority.hpp  NationalAuthority.cpp  NationalAuthority.hpp  RegionalAuthority.cpp  RegionalAuthority.hpp
src/bulletins/: Bulletin.hpp  CMakeLists.txt  LocalBulletin.cpp  LocalBulletin.hpp  NationalBulletin.cpp  RegionalBulletin.cpp
src/cryptosystem/: Combiner.cpp  Combiner.hpp  CryptoServer.cpp  CryptoUtils.hpp  KeyGeneration.cpp  KeyGeneration.hpp  sha256.cpp  sha256.hpp
